--- a/museumofcandy.html
+++ b/museumofcandy.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img class="img-fluid" src="C:\Users\indhu\vscode\hand2.png" alt="">
+                <img class="img-fluid" src="images/hand2.png" alt="">
             </div>
         </div>
     </section>
@@ -57,13 +57,13 @@
     <section class="container-fluid px-0">
         <div class="row align-items-center content">
             <div class="col-md-6 order-2 order-md-1">
-                <img src="C:\Users\indhu\vscode\milk.png" alt="" class="img-fluid">
+                <img src="images/milk.png" alt="" class="img-fluid">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
-                        <img src="C:\Users\indhu\vscode\lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <img src="images/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim omnis commodi voluptatem impedit numquam, repudiandae ab. Accusantium totam inventore pariatur sed nisi nemo iusto perferendis harum unde, minima ut hic!
                         Ipsa, illum nulla! Adipisci ipsam voluptatibus sed expedita magni aut doloremque, quod tempora reiciendis praesentium! Totam, doloribus minima. Exercitationem reiciendis iure alias, quibusdam expedita modi eligendi vitae vero eos laboriosam?</p>
                     </div>
@@ -75,25 +75,25 @@
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
-                        <img src="C:\Users\indhu\vscode\lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <img src="images/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim omnis commodi voluptatem impedit numquam, repudiandae ab. Accusantium totam inventore pariatur sed nisi nemo iusto perferendis harum unde, minima ut hic!
                         Ipsa, illum nulla! Adipisci ipsam voluptatibus sed expedita magni aut doloremque, quod tempora reiciendis praesentium! Totam, doloribus minima. Exercitationem reiciendis iure alias, quibusdam expedita modi eligendi vitae vero eos laboriosam?</p>
                     </div>
                 </div> 
             </div>
             <div class="col-md-6">
-                <img src="C:\Users\indhu\vscode\gumball.png" alt="" class="img-fluid">
+                <img src="images/gumball.png" alt="" class="img-fluid">
             </div>
         </div>
         <div class="row align-items-center content">
             <div class="col-md-6 order-2 order-md-1">
-                <img src="C:\Users\indhu\vscode\sprinkles.png" alt="" class="img-fluid">
+                <img src="images/sprinkles.png" alt="" class="img-fluid">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
-                        <img src="C:\Users\indhu\vscode\lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <img src="images/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim omnis commodi voluptatem impedit numquam, repudiandae ab. Accusantium totam inventore pariatur sed nisi nemo iusto perferendis harum unde, minima ut hic!
                         Ipsa, illum nulla! Adipisci ipsam voluptatibus sed expedita magni aut doloremque, quod tempora reiciendis praesentium! Totam, doloribus minima. Exercitationem reiciendis iure alias, quibusdam expedita modi eligendi vitae vero eos laboriosam?</p>
                     </div>
